--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.5.1
+python-dotenv==1.0.1
 pytokens==0.3.0
 requests==2.32.5
 urllib3==2.6.2
