--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,7 @@ VINDINIUM_N_TURNS=10
 # Default: true
 VINDINIUM_OPEN_BROWSER=true
 
+# Debug mode - log each move and timing (true or false)
+# Default: false
+VINDINIUM_DEBUG=false
+
