--- a/.env.example
+++ b/.env.example
@@ -2,31 +2,31 @@
 # Copy this file to .env and fill in your values
 
 # Server URL (e.g., http://localhost for local server)
-VINDINIUM_SERVER=<vindinium-server-url>
+SERVER=<vindinium-server-url>
 
 # Your API key from the Vindinium server
-VINDINIUM_KEY=<your-api-key>
+KEY=<your-api-key>
 
 # Your hero's display name
-VINDINIUM_HERO_NAME=MyBot
+HERO_NAME=MyBot
 
 # Bot to use (RandomBot, MinerBot, AggressiveBot, MinimaxBot, ...)
 # Default: MinerBot
-VINDINIUM_BOT=MinerBot
+BOT=MinerBot
 
 # Game mode (training or arena)
 # Default: training
-VINDINIUM_MODE=training
+MODE=training
 
 # Number of turns for training mode (10-300)
 # Default: 10
-VINDINIUM_N_TURNS=10
+N_TURNS=10
 
 # Open browser automatically (true or false)
 # Default: true
-VINDINIUM_OPEN_BROWSER=true
+OPEN_BROWSER=true
 
 # Debug mode - log each move and timing (true or false)
 # Default: false
-VINDINIUM_DEBUG=false
+DEBUG=false
 
